--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "smart-query",
+  "name": "LLM-chatbot",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
+    "@langchain/core": "^0.2.18",
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
